Fix custom SCSS styling files

--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
     <link href="https://api.fontshare.com/v2/css?f[]=quicksand@600,700,400,500&display=swap" rel="stylesheet">
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="./css/style.css">
     <!-- Bootstrap Icons -->
     <link rel="stylesheet" href="./node_modules/bootstrap-icons/font/bootstrap-icons.css">
     <!-- AOS Lib animation -->
@@ -61,7 +64,8 @@
                 <div class="py-5">
                     <p class="fs-4">Hi, I am</p>
                     <h2 class="fw-semibold" data-aos="fade-left" data-aos-duration="1250">VASCO MARQUES</h2>
-                    <h1 class="text-success fw-bolder typedOut" data-aos="fade-right" data-aos-duration="1250">FRONTEND
+                    <h1 class="text-success fw-bolder typedOut" data-aos="fade-right" data-aos-duration="1250">
+                        FRONTEND
                         WEB DEVELOPER
 
                     </h1>
@@ -71,82 +75,94 @@
     </div>
     <main class="container">
         <!-- About section -->
-        <div class="row about my-5 py-5">
-            <div class="row row-cols-md-2 cols-sm-1 g-1 text-center justify-content-center" id="about"
-                data-aos="fade-up" data-aos-duration="2000">
-                <div class="row-cols-2">
-                    <img class=" img-fluid rounded-circle" src="./img/profile.webp" alt="personal picture">
-                </div>
-                <div class="cols">
-                    <div class="container text-start">
-                        <h1 class="text-success border-bottom border-info fw-bolder">WHO AM I?</h1>
-                        <p>I'm a front-end web developer based in Lisbon, Portugal.</p>
-                        <p>Commited with the projects I'm working with, I'm driven by curiosity and the aim to present
-                            the
-                            best results.</p>
-                        <p>If I'm not coding, I'll probably be reading, listening to music, learning new IT skills or
-                            travelling.</p>
-                        <p>Want to know more? Check out my <em>projects</em></p>
+        <div class="container" id="about">
+            <div class="row my-5 py-5">
+                <div class="row row-cols-md-2 cols-sm-1 g-1 text-center justify-content-center" data-aos="fade-up"
+                    data-aos-duration="2000">
+                    <div class="row-cols-2">
+                        <img class=" img-fluid rounded-circle" src="./img/profile.webp" alt="personal picture">
+                    </div>
+                    <div class="cols">
+                        <div class="container text-start mt-4">
+                            <h1 class="text-success border-bottom border-info fw-bolder">WHO AM I?</h1>
+                            <p>I'm a front-end web developer based in Lisbon, Portugal.</p>
+                            <p>Commited with the projects I'm working with, I'm driven by curiosity and the aim to
+                                present
+                                the
+                                best results.</p>
+                            <p>If I'm not coding, I'll probably be reading, listening to music, learning new IT skills
+                                or
+                                travelling.</p>
+                            <p>Want to know more? Check out my <em>projects</em></p>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
         <!-- Projects container -->
-        <div class="container projects row py-5 my-5" id="work" data-aos="fade-up" data-aos-duration="2000">
-            <div class="text-end">
-                <h1 class="text-success border-bottom border-info fw-bolder">PROJECTS</h1>
-                <p>Here are some of the projects I've built with HTML, CSS and JS</p>
-            </div>
-            <div class="row row-cols-1 row-cols-md-2 p-0 m-0 g-4">
-                <div class="col">
-                    <div class="card rounded-0 border-0 shadow bg-dark" data-aos="fade-right" data-aos-duration="2000">
-                        <img src="./img/parallax.webp" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Parties Landing Page</h5>
-                            <p class="card-text">This is a landing page with parallax effect in two ways : JS and CSS
-                            </p>
-                            <div class="d-flex justify-content-end">
-                                <a href="https://tabascum.github.io/parallax-effects/"
-                                    class="btn btn-outline-success">Live Preview <i class="bi bi-github"></i></a>
+        <div class="container" id="projects">
+            <div class="container row py-5 my-5" data-aos="fade-up" data-aos-duration="2000">
+                <div class="text-end">
+                    <h1 class="text-success border-bottom border-info fw-bolder">PROJECTS</h1>
+                    <p>Here are some of the projects I've built with HTML, CSS and JS</p>
+                </div>
+                <div class="row row-cols-1 row-cols-md-2 p-0 m-0 g-4">
+                    <div class="col">
+                        <div class="card rounded-0 border-0 shadow bg-dark" data-aos="fade-right"
+                            data-aos-duration="2000">
+                            <img src="./img/parallax.webp" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Parties Landing Page</h5>
+                                <p class="card-text">This is a landing page with parallax effect in two ways : JS and
+                                    CSS
+                                </p>
+                                <div class="d-flex justify-content-end">
+                                    <a href="https://tabascum.github.io/parallax-effects/"
+                                        class="btn btn-outline-success">Live Preview <i class="bi bi-github"></i></a>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="col">
-                    <div class="card rounded-0 border-0 shadow bg-dark" data-aos="fade-left" data-aos-duration="2000">
-                        <img src="./img/avoidthebush.webp" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Game</h5>
-                            <p class="card-text">JS game inspired in Mario Bros to make the frog jump.</p>
-                            <div class="d-flex justify-content-end">
-                                <a href="https://tabascum.github.io/avoid-the-bush-game/"
-                                    class="btn btn-outline-success">Live Preview <i class="bi bi-github"></i></a>
+                    <div class="col">
+                        <div class="card rounded-0 border-0 shadow bg-dark" data-aos="fade-left"
+                            data-aos-duration="2000">
+                            <img src="./img/avoidthebush.webp" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Game</h5>
+                                <p class="card-text">JS game inspired in Mario Bros to make the frog jump.</p>
+                                <div class="d-flex justify-content-end">
+                                    <a href="https://tabascum.github.io/avoid-the-bush-game/"
+                                        class="btn btn-outline-success">Live Preview <i class="bi bi-github"></i></a>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="col">
-                    <div class="card rounded-0 border-0 shadow bg-dark" data-aos="fade-right" data-aos-duration="2000">
-                        <img src="./img/barberlandingpage.webp" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Barbershop Landing Page</h5>
-                            <p class="card-text">This landing page displays a form and two modals</p>
-                            <div class="d-flex justify-content-end">
-                                <a href="https://tabascum.github.io/newbarberlandingpage/"
-                                    class="btn btn-outline-success">Live Preview <i class="bi bi-github"></i></a>
+                    <div class="col">
+                        <div class="card rounded-0 border-0 shadow bg-dark" data-aos="fade-right"
+                            data-aos-duration="2000">
+                            <img src="./img/barberlandingpage.webp" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Barbershop Landing Page</h5>
+                                <p class="card-text">This landing page displays a form and two modals</p>
+                                <div class="d-flex justify-content-end">
+                                    <a href="https://tabascum.github.io/newbarberlandingpage/"
+                                        class="btn btn-outline-success">Live Preview <i class="bi bi-github"></i></a>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="col">
-                    <div class="card rounded-0 border-0 shadow bg-dark" data-aos="fade-left" data-aos-duration="2000">
-                        <img src="./img/calc.webp" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Calculator</h5>
-                            <p class="card-text">A simple math calculator with JS</p>
-                            <div class="d-flex justify-content-end">
-                                <a href="https://tabascum.github.io/calculator/" class="btn btn-outline-success">Live
-                                    Preview <i class="bi bi-github"></i></a>
+                    <div class="col">
+                        <div class="card rounded-0 border-0 shadow bg-dark" data-aos="fade-left"
+                            data-aos-duration="2000">
+                            <img src="./img/calc.webp" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Calculator</h5>
+                                <p class="card-text">A simple math calculator with JS</p>
+                                <div class="d-flex justify-content-end">
+                                    <a href="https://tabascum.github.io/calculator/"
+                                        class="btn btn-outline-success">Live
+                                        Preview <i class="bi bi-github"></i></a>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -210,7 +226,11 @@
             </div>
         </div>
     </main>
-    <script src="./node_modules/bootstrap/dist/js/bootstrap.js"></script>
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
+        crossorigin="anonymous"></script>
+    <!-- AOS animation lib -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         AOS.init()
