Switch page title

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="./node_modules/bootstrap-icons/font/bootstrap-icons.css">
     <!-- AOS Lib animation -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <title>tabascum.io</title>
+    <title>Vasco Marques - Web Developer</title>
 </head>
 
 <body class="container bg-dark text-light">
