Fix projects container spacing/remove row class

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <!-- Hero section -->
     <div class="container text-center border-start border-end border-info py-5">
         <div class="container text-center border-start border-end border-info py-5">
-            <div class="py-5">
+            <div class="container py-5">
                 <div class="py-5">
                     <p class="fs-4">Hi, I am</p>
                     <h2 class="fw-semibold" data-aos="fade-left" data-aos-duration="1250">VASCO MARQUES</h2>
@@ -101,12 +101,12 @@
         </div>
         <!-- Projects container -->
         <div class="container" id="projects">
-            <div class="container row py-5 my-5" data-aos="fade-up" data-aos-duration="2000">
+            <div class="container py-5 my-5" data-aos="fade-up" data-aos-duration="2000">
                 <div class="text-end">
                     <h1 class="text-success border-bottom border-info fw-bolder">PROJECTS</h1>
                     <p>Here are some of the projects I've built with HTML, CSS and JS</p>
                 </div>
-                <div class="row row-cols-1 row-cols-md-2 p-0 m-0 g-4">
+                <div class="container row row-cols-1 row-cols-md-2 p-0 m-0 g-4">
                     <div class="col">
                         <div class="card rounded-0 border-0 shadow bg-dark" data-aos="fade-right"
                             data-aos-duration="2000">
