Align navbar buttons text to center in mobile layout

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-                    <ul class="navbar-nav fs-5">
+                    <ul class="navbar-nav fs-5 text-center">
                         <li class="nav-item" data-aos="fade-down" data-aos-duration="1250">
                             <a class="nav-link text-success m-2" aria-current="page" href="index.html">Home</a>
                         </li>
